--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <div class="collect-content">
               <a href="" class="resde">
                 <!-- <h2 class="c-title">Marketing Services</h2> -->
-                <h2 class="c-title">Content Writing</h2>
+                <h2 class="c-title"><a href="https://medium.com/@banerjeerahul745"></a>aContent Writing</h2>
               </a>
               <p class="c-description text-center">
                 Content writing is the process of writing, editing, and publishing content in a digital format.
